--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ NGRDI.tif
 NGRDI.tif.aux.xml
 PCA.tif
 PCA.tif.aux.xml
+20170706_102911_0f43_AnalyticMS_SR.tif.aux.xml
+20180723_104602_103c_AnalyticMS_SR.tif.aux.xml
